@@ -47,6 +47,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #18044: The new email header parser was mis-parsing encoded words where
+  an encoded character immediately followed the '?' that follows the CTE
+  character, resulting in a decoding failure.  They are now decoded correctly.
+
 - Issue #18101: Tcl.split() now process strings nested in a tuple as it
   do with byte strings.
 
